...
  return (
    <div className="flex w-full flex-col">
      <div className="flex h-12 w-full flex-row justify-between px-2">
        <NavigationMenu className="h-full w-full items-center">
          <NavigationMenuList>
            <NavigationMenuItem>
              <NavigationMenuTrigger>My Leagues</NavigationMenuTrigger>
              <NavigationMenuContent className="flex min-w-[400px] flex-col gap-4 p-2">
                {props.data?.leagues.map((l) => {
                  if (!l) {
                    return null;
                  }
                  return (
...
