...
    },
  ],
  week = 1,
  picks: picksProp = [
    {
      awayTeam: "NE",
      homeTeam: "PHI",
      time: new Date("2024-09-08T00:00:00.000Z"),
      chosen: "home",
    },
    {
      awayTeam: "NE",
      homeTeam: "PHI",
...
